crates/validation/tests/snapshots/scenario_tests__materialization_driver_returns_error.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries,
        error: driver error while validating materialization testing/webhook/deliveries
        
        Caused by:
            A driver error!,
    },
]
