crates/validation/tests/snapshots/scenario_tests__materialization_endpoint_not_found.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: endpoint MaterializeEndpoit, referenced by materialization, is not defined; did you mean materializeEndpoint defined at test://example/catalog.yaml#/endpoints/materializeEndpoint?,
    },
    Error {
        scope: test://example/int-halve-materialization#/materializations/0,
        error: endpoint wildlyOffName, referenced by materialization, is not defined,
    },
]
