crates/validation/tests/snapshots/scenario_tests__materialization_missing_resource_paths.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views/bindings/1,
        error: connector returned an invalid empty resource path for this materialization binding,
    },
]
