crates/validation/tests/snapshots/scenario_tests__materialization_not_before_after_ordering.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/0/source,
        error: a `notBefore` constraint must happen before `notAfter`,
    },
]
