crates/validation/tests/snapshots/scenario_tests__materialization_selector.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include projection Int of collection testing/int-string is not a partition,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include partition selector field Int value true is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include projection Unknown does not exist in collection testing/int-string,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include partition selector field bit value 42 is incompatible with the projections type, "boolean",
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include partition selector field bit value "" is incompatible with the projections type, "boolean",
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: include partition selector field bit cannot be an empty string,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude projection AlsoUnknown does not exist in collection testing/int-string,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude projection Int of collection testing/int-string is not a partition,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude partition selector field Int value false is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude partition selector field Int value "" is incompatible with the projections type, "integer",
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude partition selector field Int cannot be an empty string,
    },
    Error {
        scope: test://example/int-string-materialization#/materializations/0,
        error: exclude partition selector field bit value "a string" is incompatible with the projections type, "boolean",
    },
]
