crates/validation/tests/snapshots/scenario_tests__materialization_source_not_found.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-materialization#/materializations/testing~1int-string,
        error: collection testiNg/int-strinK, referenced by materialization testing/int-string, is not defined; did you mean testing/int-string defined at test://example/int-string#/collections/testing~1int-string?,
    },
    Error {
        scope: test://example/int-halve-materialization#/materializations/testing~1int-halve,
        error: collection wildly/off/name, referenced by materialization testing/int-halve, is not defined,
    },
]
