crates/validation/tests/snapshots/scenario_tests__meta_uuid_timestamp_forbidden_as_partition.snap
---
source: crates/validation/tests/scenario_tests.rs
assertion_line: 1196
expression: errors
---
[
    Error {
        scope: test://example/int-string#/collections/testing~1int-string/projections/timestamp,
        error: location /_meta/uuid/timestamp is unknown in schema test://example/int-string.schema,
    },
]
