crates/validation/tests/snapshots/scenario_tests__must_have_update_or_publish.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: must set at least one of 'update' or 'publish' lambdas,
    },
]
